--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Canadian Citizenship Flashcards</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="assets/favicon.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="/assets/favicon.png" sizes="16x16">
   <link rel="apple-touch-icon" sizes="16x16" href="assets/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
